--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     txn_ref: '12344grtr',
     amount: 10000,
     currency: 566,
-    onCompleteted:paymentCallback,
+    onComplete:paymentCallback,
     mode: 'TEST', // Use 'LIVE' for production
     site_redirect_url: 'https://example.com/payment-response', // Optional, fallback if callback fails
   };
