--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <title>Destooooo</title>
 
     <script>
-  const paymentRequest = {
-    merchant_code: 'MX6072',
-    pay_item_id: '9405967',
-    txn_ref: '12344grtr',
-    amount: 10000,
-    currency: 566,
-    onComplete:paymentCallback,
-    mode: 'TEST', // Use 'LIVE' for production
-    site_redirect_url: 'https://example.com/payment-response', // Optional, fallback if callback fails
-  };
+  var paymentRequest = {
+    merchant_code: "MX007",          
+    pay_item_id: "101007",
+    txn_ref: "sample_txn_ref_123",
+    site_redirect_url: "https://google.com/",
+    amount: 10000, 
+    currency: 566, // ISO 4217 numeric code of the currency used
+    onComplete: paymentCallback,
+    mode: 'TEST'
+};
+
+
+
   function paymentCallback(response) {
     console.log(response, "restooooo");
 }
