--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </script>
 </head>
 <body>
-    <script src="https://newwebpay.qa.interswitchng.com/inline-checkout.js" onload="initializeWebpay()"></script>
+    <script src="https://newwebpay.qa.interswitchng.com/inline-checkout.js"></script>
 
 </body>
 </html>
